--- a/css/style.css
+++ b/css/style.css
@@ -200,3 +200,38 @@ img {
     display: block;
     margin-bottom: 40px;
 }
+
+/* section footer */
+
+.footer {
+    height: 125px;
+}
+
+.footer-container {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-left {
+    display: flex;
+    align-items: center;
+}
+
+.footer-logo {
+    margin-right: 25px;
+}
+
+.footer-right {
+
+}
+
+.footer-nav-list {
+    display: flex;
+}
+
+.footer-nav-item:not(:last-child) {
+    margin-right: 35px;
+    
+}
