--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,43 @@
+/* open-sans-300 - latin_cyrillic */
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+    src: local(''),
+        url('../fonts/open-sans-v27-latin_cyrillic-300.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/open-sans-v27-latin_cyrillic-300.woff') format('woff');
+    /* Modern Browsers */
+}
+/* open-sans-regular - latin_cyrillic */
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+        url('../fonts/open-sans-v27-latin_cyrillic-regular.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/open-sans-v27-latin_cyrillic-regular.woff') format('woff');
+    /* Modern Browsers */
+}
+/* open-sans-600 - latin_cyrillic */
+@font-face {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    src: local(''),
+        url('../fonts/open-sans-v27-latin_cyrillic-600.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/open-sans-v27-latin_cyrillic-600.woff') format('woff');
+    /* Modern Browsers */
+}
+
 * {
     box-sizing: border-box;
 }
 
 html {
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 a {
@@ -41,14 +75,24 @@ img {
     display: flex;
     align-items: center;
     height: 100%;
-}
-
-.logo {
-    margin-right: auto;
+    justify-content: space-between;
 }
 
 .nav-list {
-    display: flex;   
+    display: flex;
+    margin: auto;
+}
+
+.nav-item {
+    font-size: 15px;
+    line-height: 1;
+}
+
+.nav-link {
+    color: #1c1c1c;
+}
+.nav-item.is-active .nav-link {
+    color: #3172b9;
 }
 
 .nav-item:not(:last-child) {
@@ -56,40 +100,85 @@ img {
 }
 
 .header-btn {
-    margin-left: 80px;
+    margin-left:40px;
 }
 
 .btn {
     display: inline-block;
     background-color: #3172b9;
-    font-size: 12px;
+    font-size: 16px;
+    font-weight: 600;
     color: white;
     text-transform: uppercase;
     line-height: 1;
-    padding: 15px 16px;
+    padding: 15px 30px;
     border-radius: 4px;
     cursor: pointer;
 }
 
+.btn.btn-big {
+    padding: 20px 60px;
+}
+
+/* Hero */
+
+.section-hero {
+    background: url('../img/Base.png') right center no-repeat white;
+    background-size: contain; 
+}
+
 .hero-container {
-    padding-top: 120;
-    overflow: 130px;
+    padding-top: 120px;
+    padding-bottom: 130px;
 }
 
 .hero-content {
-    max-width: 50%;
+    max-width: 44%;
 }
 
 .section-hero-headindg {
-    margin-bottom: 20px;
+    font-size: 40px;
+    line-height: 52px;
+    font-weight: 300;
+    color: #1c1c1c;
+    margin-top: 0px;
+    margin-bottom: 30px;
 }
 
 .selection-hero-description {
     margin-bottom: 30px;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 25px;
+    color: #787878;
 }
 
 .selection-hero-btn-description {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 10px;
+    font-family: 'Open Sans';
+    font-size: 11px;
+    line-height: 1px;
+    font-weight: 400;
+    color: #787878;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.section-hero-action {
+    display: inline-block;
+}
+
+.section-hero-ssl-icon {
+    display: inline-block;
+    width: 13px;
+    height: 17px;
+    margin-right: 10px;
+    background: url('../img/ssl.svg') center center no-repeat transparent;
+    background-size: contain;
+    transform: translateY(-1px);
 }
 
 /* section what we do */
@@ -140,7 +229,7 @@ img {
     margin-right: 30px;
 }
 
-.section-clients-user{
+.section-clients-user {
     display: flex;
     align-items: center;
 }
@@ -223,15 +312,11 @@ img {
     margin-right: 25px;
 }
 
-.footer-right {
-
-}
-
 .footer-nav-list {
     display: flex;
 }
 
 .footer-nav-item:not(:last-child) {
     margin-right: 35px;
-    
+
 }
