--- a/css/style.css
+++ b/css/style.css
@@ -193,14 +193,26 @@ img {
 
 /* section what we do */
 
+.section-heading {
+    margin-top: 0;
+    margin-bottom: 25px;
+    font-size: 36px;
+    line-height: 1.3;
+    font-weight: 300;
+    color: #414141;
+}
 
 .section-do {
     padding: 140px;
     padding-bottom: 100px;
+    border-bottom: 1px solid #e4e4e4;
 }
 
 .section-description {
-    margin-top: 25px;
+    margin-top: 0;
+    font-size: 16px;
+    line-height: 1.31;
+    color: #787878;
 }
 
 .section-do-list {
@@ -209,13 +221,38 @@ img {
 }
 
 .section-do-item {
+    padding: 60px 30px;
     flex: 1 1 25%;
-    outline: 2px solid #e4e4e4;
-    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
 }
 
 .section-do-item:not(:last-child) {
     margin-right: 30px;
+}
+
+.section-do-item-decription {
+    text-align: center;
+    margin-top: 0;
+    font-size: 14px;
+    line-height: 21px;
+    color: #787878;
+    font-weight: 300;
+}
+
+.section-do-item-heading {
+    font-size: 20px;
+    line-height: 1;
+    color: #1c1c1c;
+    font-weight: 600;
+    margin-bottom: 18px;
+}
+
+.section-do-icon {
+    margin-bottom: 30px;
 }
 
 /* section our happy clients */
@@ -223,6 +260,11 @@ img {
 .section-clients {
     padding: 90px;
     padding-bottom: 100px;
+    border-bottom: 1px solid #e4e4e4;
+}
+
+.section-clients-heading {
+    margin-bottom: 45px;
 }
 
 .section-clients-list {
@@ -231,18 +273,34 @@ img {
 }
 
 .section-clients-list-item {
+    padding: 50px 35px 30px ;
     flex: 1 1 33.33%;
-    outline: 2px solid #e4e4e4;
-    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid #e4e4e4;
+    border-radius: 5px;
 }
 
 .section-clients-list-item:not(:last-child) {
     margin-right: 30px;
 }
 
+.section-clients-testimonial {
+    margin-top: 0;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 25px;
+    color: #787878;
+    margin-bottom: 35px;
+}
+
 .section-clients-user {
+    padding-top: 40px;
+    border-top: 1px solid #e4e4e4;
     display: flex;
     align-items: center;
+    padding-top: 30px;
 }
 
 .section-clients-avatar {
@@ -251,6 +309,20 @@ img {
     border: 2px solid #3172b9;
     border-radius: 50%;
     margin-right: 15px;
+}
+
+.section-clients-username {
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 25px;
+    color: #1c1c1c;
+}
+
+.section-clients-user-description{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px;
+    color: #787878;
 }
 
 /* section contacts */
@@ -329,5 +401,4 @@ img {
 
 .footer-nav-item:not(:last-child) {
     margin-right: 35px;
-
 }
